# raspberry-pi-bme280

./: .gitmodules  CMakeLists.txt  DEPENDENCIES.apt  flash_micropython_esp32.md  httpsock.cpp  httpsock.hpp  main.cpp  pghandler.cpp  pghandler.hpp  sense.cpp  sense.h
esp32_bme280/: esp32_bme280.ino
esp32_mp_bme280/: micropy.json  pymakr.conf
esp32_mp_bme280/src/: BME280.py  boot.py  main.py
frontend/: main.js  package.json
frontend/public/: code.js  index.html  style.css
public/: index.html
